<resources>
    <string name="app_name">SymptomMonitoring</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="symptoms">Symptoms</string>
    <string name="textview">TextView</string>
    <string name="measure_respiratory_rate">Measure Respiratory Rate</string>
    <string name="measure_heart_rate">Measure Heart Rate</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="respiratory_rate">Respiratory Rate</string>
    <string name="upload_signs_amp_symptoms"><![CDATA[Upload Signs & Symptoms]]></string>
    <string name="symptom_logging_page">Symptom logging page</string>
</resources>